# NewTapo

./: .gitignore  README.md  class_diagram.md  config.json  generate_plots.py  latency_plot.py  main.py  project_structure.md  pyproject.toml  run.py  test.py  test_audio.py
Paper/: Marcin_Mazur_242467.synctex(busy)  Marcin_Mazur_242467.tex  Prompt for Engeneering Thisis.txt  cel_i_zakres.tex  literatura.bib  podsumowanie.tex  rozdzial1.tex  rozdzial2.tex  rozdzial3.tex  rozdzial4.tex  streszczenieislowakluczowe.tex  wstep.tex
Paper/Sources/: architecture_diagram.mmd  class_diagram.mmd  sequence_diagram.mmd
app/: __init__.py  settings.py  shared.py
app/audio/: streamer.py
app/camera/: camera.py
app/detection/: base.py  motion.py
app/recording/: recorder.py
app/video/: streamer.py
app/web/: routes.py  socket_handlers.py
app/web/templates/: index.html
test/: benchmark_motion.py  test_memory_usage.py
