[project]
name = "refactortapo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "av>=16.0.1",
    "flask>=3.1.2",
    "flask-socketio>=5.5.1",
    "matplotlib>=3.10.8",
    "moviepy>=2.2.1",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.12.0.88",
    "pytapo>=3.3.51",
    "seaborn>=0.13.2",
]
